# libprefix

./: README  TODO  autoconf.sh  autogen.sh  configure.ac  graph.h  spellcheck  spellcheck.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: .array.h.swp  .graph.h.swp  .spellcheck.c.swp  Makefile.am  Makefile.in  array.c  array.h  defaultargs.h  graph.c  graph.h  hashtable.c  hashtable.h  liberrors.c  liberrors.h  main  main.c  mem_metrics.c  mem_metrics.h  node.c  node.h  spellcheck  ut_graph.c
test/: Makefile.am  ut_array.c  ut_graph.c  ut_hashtable.c
